# Particle-Simulator

./: .gitignore  CMakeLists.txt  rules.txt
src/: main.cpp  matrix.h  particle.cpp  particle.h  particles_manager.cpp  particles_manager.h  random.h  renderer.cpp  renderer.h
